# pinuyumayan-knowledger

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: bootstrap.ps1
src/formosanbank_puyuma/: __init__.py  cli.py  pipeline.py  sources.py  train_translation.py  train_tts.py
tests/: test_pipeline.py
